<resources>
    <string name="app_name">Tentang-Ku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="menu_button">btn_menu</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="press_again">Please press again to exit</string>
    <string name="menu_name">Menu name</string>
    <string name="menu_img">menu_img</string>
    <string name="time_txt">17:00</string>
    <string name="city_txt">Bangkok</string>
    <string name="current_time_situation">Good Evening</string>
    <string name="user_name">Rocky Splitz</string>
    <string name="menu">Main Menu</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="notes">Notes</string>
    <string name="new_note">New Note</string>
    <string name="note_title">Note Title</string>
    <string name="date_txt">12 March 2010</string>
    <string name="description">Description content.</string>
    <string name="input_title">Input title</string>
    <string name="button_back">Button back</string>
    <string name="button_save_or_update">Button Save or Update</string>
    <string name="no_files">No Files</string>
    <string name="button_delete">Button Delete</string>
    <string name="empty">Empty</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_cancel">Do you want to cancel this?</string>
    <string name="message_delete">Are you sure you want to delete this?</string>
    <string name="added">One item added successfully</string>
    <string name="changed">One item changed successfully</string>
    <string name="deleted">One item deleted successfully</string>
    <string name="no_data">No Data</string>
    <string name="background">Background</string>
    <string name="my_weight">My Weight</string>
    <string name="show_indicator">Show Indicator</string>
    <string name="weight_progress">Weight Progress</string>
    <string name="add_new_weight">Add new weight</string>
    <string name="weight_history">Weight History</string>
    <string name="add_weight">Add weight</string>
    <string name="body_weight_kg">Body weight (Kg)</string>
    <string name="your_weight">Your weight</string>
    <string name="date">Date</string>
    <string name="update_weight">Update weight</string>
    <string name="delete_weight">Delete weight</string>
    <string name="money_txt">Rp.0</string>
    <string name="balance">Balance</string>
    <string name="total_transaction">Total transaction</string>
    <string name="number_txt">0</string>
    <string name="summaries">Summaries</string>
    <string name="your_transaction">Your transaction</string>
    <string name="spending_money">Spending money</string>
    <string name="income">Income</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="nominal">Nominal</string>
    <string name="insert_nominal">Insert nominal</string>
    <string name="transaction_type">Transaction type</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="outcome">Outcome</string>
    <string name="summaries_this_month">Summary this month</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="total_transaction_in_month">Total transaction in this month</string>
    <string name="new_reminder">New Reminder</string>
    <string name="reminder_title">Reminder title</string>
    <string name="repeat">Repeat</string>
    <string name="reminder">Reminder</string>
    <string name="type_of_reminder">Type of Reminder</string>
    <string name="time">Time</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="reminder_data">Reminder Data</string>
    <string name="reminder_history">Reminder History</string>
    <string name="degree_txt">30°C</string>
    <string name="weather_desc_txt">Sunny</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="wind_text">12Km/h</string>
    <string name="wind">Wind</string>
    <string name="humidity_text">22%</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_text">30hPa</string>
    <string name="powered_by_openweathermap_org">Powered by openweathermap.org</string>
    <string name="last_update">Last update</string>

    <string-array name="menu_name">
        <item>Body Weight</item>
        <item>Finance</item>
        <item>Notes</item>
        <item>Reminder</item>
        <item>Weather</item>
    </string-array>

    <integer-array name="menu_img">
        <item>@drawable/weight_icon</item>
        <item>@drawable/finance_icon</item>
        <item>@drawable/notes_icon</item>
        <item>@drawable/reminder_icon</item>
        <item>@drawable/weather_icon</item>
    </integer-array>

    <string-array name="transaction_type">
        <item>Income</item>
        <item>Outcome</item>
    </string-array>

    <string-array name="reminder_type">
        <item>One time</item>
        <item>Daily</item>
    </string-array>
</resources>